# Contract_Sentinel

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_jobs_table.py  0002_add_original_filename.py  0003_create_users.py  0004_add_jobs_user_id.py  0005_add_user_name_title.py
backend/app/: config.py
backend/app/api/: __init__.py  __main__.py  aggregate.py  auth.py  main.py  routes.py  security.py
backend/app/db/: Data-Protection-Addendum.md
backend/app/delivery/: __init__.py  delivery_step.py  models.py
backend/app/graph/: __init__.py  builder.py  state.py
backend/app/models/: report.py
backend/app/runner/: __init__.py  __main__.py  core.py  events.py  migrations.py  models.py  persistence.py  progress.py  registry.py  store.py  user_store.py  worker.py
backend/contractsentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/kb/: clauses.faiss  clauses_corpus.jsonl
backend/eval/: eval_crag_confidence.py
backend/eval/corpus/: heavy_contract.docx  sample_balanced.docx
backend/eval/gold/: heavy_contract.json  sample_balanced.json
backend/eval/harness/: __init__.py  config.py  matcher.py  run.py  schema.py  score.py  scorer.py  variance.py  variance_stats.py
backend/scripts/: build_corpus.py  build_kb.py  delivery_smoke.py  oauth_bootstrap.py
backend/tests/: conftest.py  markers.py
backend/tests/fixtures/: sample.docx  unsupported.txt
backend/tests/integration/: conftest.py  test_alembic_head.py  test_api_analyze.py  (+22 more)
(+315 files in other folders)
