[project]
name = "contractsentinel"
version = "0.1.0"
description = "Autonomous contract-risk-analysis agent"
authors = [{ name = "Yash Joshi", email = "joshiyash710@gmail.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "langgraph>=1.2.0,<2.0.0",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "langchain-core>=0.3.0",
    "ollama>=0.3.0",
    "langchain-ollama>=1.1.0,<2.0.0",
    "httpx>=0.27.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.24.0",
    "duckduckgo-search>=6.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "mcp>=1.27,<2.0.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.125.0",
    "pydantic>=2.9.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
eval = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"